# AndroidBuildBy

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
resources/: sdk_rules.json
src/: main.py
src/core/: __init__.py  adb_wrapper.py  apk_analyzer.py  apk_extractor.py  app_scanner.py  device_manager.py  report_exporter.py  sdk_registry.py
src/models/: __init__.py  analysis_result.py  app_info.py  device.py
src/ui/: analysis_view.py  app_table.py  device_panel.py  main_window.py  styles.py  workers.py
src/utils/: android_versions.py  elf_parser.py
